templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-services-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-ui
                port:
                  number: 3000
    - host: nodeapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapi
                port:
                  number: 3000
    - host: javaapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: javaapi
                port:
                  number: 8080
